@@ -1,6 +1,11 @@
 SVN
 -------------------------------
 
+XML:   Resolved issue CASTOR-1198 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
+       ID resolution now takes validation configuration into account.
+       Details: http://jira.codehaus.org/browse/CASTOR-1198
+       (Werner - 20070201)
+
 XML:   Resolved issue CASTOR-1861 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
        Added new functionality to XMLClassDescriptorResolver to pre-load class descriptors for a package.
        Details: http://jira.codehaus.org/browse/CASTOR-1861
